# clover_sketches

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  COPYRIGHT  LICENSE
cmake/Dependencies/: CMakeLists.txt  Clover.cmake  GoogleBenchmark.cmake  GoogleTest.cmake
cmake/dependencies/: CMakeLists.txt  Clover.cmake  clover.cmake  concurrent_queue.cmake  dear_imgui.cmake  eigen.cmake  glfw.cmake  google_benchmark.cmake  google_test.cmake  gui.cmake
src/clover_sketches_benchmark/: CMakeLists.txt  benchmark_main.cpp
src/clover_sketches_lib/: CMakeLists.txt
src/clover_sketches_lib/clover_sketches/: example.hpp
src/clover_sketches_lib/impl/: example.cpp
src/clover_sketches_lib/lib/_atom/: drag_slider_000.cpp  drag_slider_000.hpp  drag_slider_025.cpp  drag_slider_025.hpp  filter_type.cpp  filter_type.hpp  knob.cpp  knob.hpp  resettable.cpp  resettable.hpp  text.cpp  text.hpp
src/clover_sketches_lib/lib/adsr/: draw_adsr.hpp  draw_adsr_000.cpp
src/clover_sketches_lib/lib/audio_frame/: audio_frame.hpp  audio_frame_math.hpp
src/clover_sketches_lib/lib/cymbal/: cymbal.hpp  cymbal_000.cpp  cymbal_000.hpp  (+7 more)
src/clover_sketches_test/: CMakeLists.txt  main.test.cpp
src/sketches/: CMakeLists.txt
src/sketches/00-template/: CMakeLists.txt  main.cpp
src/sketches/000-template/: CMakeLists.txt
src/sketches/000_sd_template/: CMakeLists.txt  context.hpp
src/sketches/000_template/: CMakeLists.txt  audio.hpp  gui.hpp  shared_props.hpp
src/sketches/001-kick/: CMakeLists.txt
src/sketches/002_snare/: CMakeLists.txt  main.cpp
src/sketches/002b-snare/: CMakeLists.txt
src/sketches/002b_snare/: composition.hpp  main.cpp
src/sketches/003-clap/: CMakeLists.txt  main.cpp
src/sketches/003_clap/: composition_kick.hpp
src/sketches/004-cymbal/: composition_kick.hpp
src/sketches/004_cymbal/: CMakeLists.txt  composition.hpp  gui.hpp  shared_props.hpp
src/sketches/005-snare-resonator/: composition.hpp
src/sketches/005_snare_resonator/: CMakeLists.txt  main.cpp
src/sketches/006-gui/: CMakeLists.txt  audio.hpp
src/sketches/006_gui/: CMakeLists.txt  composition.hpp  gui.hpp  implot_example.h
src/sketches/007-snare-resonator-gui/: CMakeLists.txt  composition.hpp  gui.hpp
src/sketches/007_snare_resonator_gui/: CMakeLists.txt  audio.hpp  composition.hpp  gui.hpp  resonator_section.hpp  smooth.hpp
src/sketches/008_stsq/: CMakeLists.txt  audio.hpp  composition.cpp  composition.hpp  composition_clap.cpp  composition_clap.hpp  composition_cymbal.cpp  composition_cymbal.hpp  composition_kick.cpp  gui.hpp
src/sketches/009_fdn/: CMakeLists.txt  audio.hpp  composition.cpp  composition.hpp  gui.hpp
src/sketches/01-kick/: CMakeLists.txt  composition.hpp  main.cpp
src/sketches/010_fdn_better/: CMakeLists.txt  audio.hpp  composition.cpp  composition.hpp  gui.hpp
src/sketches/011_preset/: CMakeLists.txt  audio.hpp  composition.hpp  gui.hpp  notes.md
src/sketches/012_preset_fdn/: CMakeLists.txt  audio.hpp  composition.cpp  composition.hpp  gui.hpp  notes.md
src/sketches/013_semi_auto_props/: CMakeLists.txt  main.cpp
src/sketches/014_nx_osc/: CMakeLists.txt  audio.hpp  composition.cpp  composition.hpp  gui.hpp  shared_props.hpp  util.hpp
src/sketches/015_frsq/: CMakeLists.txt  audio.hpp  composition.cpp  composition.hpp  gui.hpp
src/sketches/016_meta_sq/: CMakeLists.txt  audio.hpp  gui.hpp  main.cpp  shared_props.hpp
src/sketches/017_peqn/: CMakeLists.txt  audio.hpp  composition.cpp  composition.hpp  gui.hpp
src/sketches/018_env_bp/: CMakeLists.txt  audio.hpp  composition.cpp  composition.hpp  gui.hpp  main.cpp
src/sketches/019_composition/: CMakeLists.txt  _REFLECTIONS_CHALLENGES.md  _REFLECTIONS_WINS.md  _REFLECTIONS__NEXT_STEPS.md  audio.hpp  gui.cpp  gui.hpp  main.cpp  shared_props.hpp
src/sketches/02-snare/: CMakeLists.txt  composition.hpp  main.cpp
src/sketches/020_composition_template/: CMakeLists.txt  audio.hpp  gui.hpp  main.cpp
src/sketches/021_sd_template/: CMakeLists.txt  audio.cpp  audio.hpp  context.hpp  gui.cpp  gui.hpp  main.cpp
src/sketches/022_sd_reso_chords/: CMakeLists.txt  audio.cpp  context.hpp  gui.hpp
src/sketches/023_fdn/: CMakeLists.txt  audio.cpp  context.hpp  gui.cpp  main.cpp
src/sketches/024_dub/: CMakeLists.txt  audio.cpp  context.hpp  gui.cpp  gui.hpp  main.cpp  util.hpp
src/sketches/024_kick_study/: CMakeLists.txt  context.hpp
src/sketches/025_cymbal_ui/: CMakeLists.txt  audio.cpp  context.hpp  gui.cpp
src/sketches/026_stateful/: CMakeLists.txt  audio.cpp  context.hpp  gui.cpp  gui.hpp  main.cpp
src/sketches/027_gpeq/: CMakeLists.txt  audio.cpp  audio.hpp  context.hpp  gui.cpp  main.cpp
src/sketches/028_transport/: CMakeLists.txt  audio.cpp  context.hpp  gui.cpp  main.cpp
src/sketches/029_app/: CMakeLists.txt  app.cpp  app.hpp  app.live_audio.cpp  app.live_graphics.cpp  app.render_audio.cpp  audio.cpp  behaviours.cpp  behaviours.hpp  context.cpp  context.hpp  main.cpp
src/sketches/02b-snare/: CMakeLists.txt  composition.hpp  composition_snare_body.hpp
src/sketches/03-clap/: CMakeLists.txt  clap_env.hpp  composition.hpp  main.cpp
src/sketches/030_stereo_fdn_ui/: CMakeLists.txt  behaviours.hpp
src/sketches/031_reso_snare/: CMakeLists.txt  README.md  behaviours.hpp
src/sketches/032_meter/: CMakeLists.txt  behaviours.cpp  behaviours.hpp
src/sketches/033_channel_strip/: CMakeLists.txt  behaviours.cpp  behaviours.hpp
src/sketches/034_fm/: CMakeLists.txt  behaviours.cpp  behaviours.hpp
src/sketches/035_procedural/: CMakeLists.txt  main.cpp
src/sketches/036_subtractive/: CMakeLists.txt  behaviours.cpp  main.cpp
src/sketches/037_fm/: CMakeLists.txt  behaviours.cpp
src/sketches/038_perc_loop/: CMakeLists.txt  behaviours.cpp  behaviours.hpp
src/sketches/039_loop/: CMakeLists.txt  behaviours.cpp
src/sketches/04-cymbal/: CMakeLists.txt  composition.hpp  composition_cymbal.hpp  main.cpp
src/sketches/040_loop/: CMakeLists.txt  behaviours.cpp  behaviours.hpp
src/sketches/05-snare-resonator/: CMakeLists.txt  composition.hpp
src/sketches/06-gui/: CMakeLists.txt  main.cpp
(+629 files in other folders)
